Fixed cartPreview position and transition animation for mobile, updated z-index for header, floatNav, shopNav and cart preview

--- a/ourdailyapp/src/Components/floatNav/floatNav.style.scss
+++ b/ourdailyapp/src/Components/floatNav/floatNav.style.scss
@@ -12,7 +12,7 @@
 
   color: var(--clr);
 
-  z-index: 3;
+  z-index: 8;
   display: flex;
   flex-direction: column;
 
@@ -20,14 +20,16 @@
 
   justify-content: center;
 
-  opacity: 1;
+  opacity: 0;
 
   clip-path: circle(20px at 100% -20%);
 
-  transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out, opacity 0ms 1s;
 
   &.active {
     clip-path: circle(2500px at 100% -10%);
+    transition: all 1s ease-in-out, opacity 0ms;
+    opacity: 1;
   }
 }
 
