--- a/ourdailyapp/src/Components/header/header.style.scss
+++ b/ourdailyapp/src/Components/header/header.style.scss
@@ -4,7 +4,7 @@
   width: 100vw;
 
   position: relative;
-  z-index: 5;
+  z-index: 10;
 }
 
 //=========== Nav ===========
