--- a/ourdailyapp/src/ComponentsNotReuse/cartPreview/cartPreview.style.scss
+++ b/ourdailyapp/src/ComponentsNotReuse/cartPreview/cartPreview.style.scss
@@ -1,10 +1,13 @@
 .cart-preview {
   position: fixed;
-  top: 10%;
-  right: 2%;
-  transform: translateX(450px);
-  transition: transform 500ms;
-  z-index: 1;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  // transform: translateX(450px);
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 300ms;
+  z-index: 3;
   //   border: 1px solid var(--gray2);
   border-radius: 10px;
   height: 28em;
@@ -22,7 +25,21 @@
   color: white;
 
   &.active {
-    transform: translateX(0);
+    // transform: translate(-50%, 0);
+    opacity: 1;
+    pointer-events: initial;
+  }
+
+  @media screen and (min-width: 450px) {
+    top: 10%;
+    right: 2%;
+    left: initial;
+    opacity: 1;
+    transform: translateX(450px);
+    transition: transform 300ms;
+    &.active {
+      transform: translateX(0);
+    } 
   }
 
   //   ======================= empt cart text =======================
@@ -131,7 +148,8 @@
     }
 
     .btn--closePreview {
-      background: var(--red-light);
+      // background: var(--red-light);
+      border: 1px solid white;
       flex-basis: 30%;
     }
   }
